--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/global.css">
 	<link rel="stylesheet" type="text/css" href="./css/header.css">
 	<link rel="stylesheet" type="text/css" href="./css/sectionOne.css">
+	<link rel="stylesheet" type="text/css" href="./css/sectionTwo.css">
+	<link rel="stylesheet" type="text/css" href="./css/sectionThree.css">
+	<link rel="stylesheet" type="text/css" href="./css/sectionFour.css">
+	<link rel="stylesheet" type="text/css" href="./css/sectionFive.css">
+	<link rel="stylesheet" type="text/css" href="./css/footer.css">
 	<link 
 		rel="stylesheet" 
 		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" 
@@ -125,10 +130,200 @@
 				</div>
 			</section>
 			<!-- Section 2 -->
-			<section class="section-two">
-				
+			<section class="section-two padded-container">
+				<h3 class="section-title-h3">Section title h3</h3>
+				<div class="read-more-cards">
+					<div class="read-more-card">
+						<div class="read-more-txt">
+							<h1 class="read-more-h1">Lorem ipsum dolor sit</h1>
+							<p class="subtitle-1-16pt-regular"> 
+								Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+							</p>	
+						</div>
+						<button class="read-more-btn subtitle-1-16pt-regular">READ MORE</button>
+					</div>
+					<div class="read-more-card">
+						<div class="read-more-txt">
+							<h1 class="read-more-h1">Lorem ipsum dolor sit</h1>
+							<p class="subtitle-1-16pt-regular"> 
+								Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+							</p>	
+						</div>
+						<button class="read-more-btn subtitle-1-16pt-regular">READ MORE</button>
+					</div>
+					<div class="read-more-card">
+						<div class="read-more-txt">
+							<h1 class="read-more-h1">Lorem ipsum dolor sit</h1>
+							<p class="subtitle-1-16pt-regular"> 
+								Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+							</p>	
+						</div>
+						<button class="read-more-btn subtitle-1-16pt-regular">READ MORE</button>
+					</div>
+					<div class="read-more-card">
+						<div class="read-more-txt">
+							<h1 class="read-more-h1">Lorem ipsum dolor sit</h1>
+							<p class="subtitle-1-16pt-regular"> 
+								Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+							</p>	
+						</div>
+						<button class="read-more-btn subtitle-1-16pt-regular">READ MORE</button>
+					</div>
+				</div>
+			</section>
+			<!-- Section 3 -->
+			<section class="section-three padded-container">
+				<h3 class="section-title-h3">Section title h3</h3>
+				<div class="profile-cards">
+					<div class="profile-card">
+						<div class="profile-img">
+							<img src="./assets/img/albert-dera-1.png" />
+						</div>
+						<div class="profile-text">
+							<div class="profile-headings">
+								<h1 class="subtitle-1-16pt">Firstname Lastname</h1>
+								<h2 class="subtitle-1-16pt-regular">CEO & Founder</h2>
+							</div>
+							<div class="profile-contacts">
+								<p>firstname.lastname@company.fi</p>
+								<p>+358 40 111 2222</p>
+							</div>
+						</div>
+					</div>
+					<div class="profile-card">
+						<div class="profile-img">
+							<img src="./assets/img/albert-dera-3.png" />
+						</div>
+						<div class="profile-text">
+							<div class="profile-headings">
+								<h1 class="subtitle-1-16pt">Firstname Lastname</h1>
+								<h2 class="subtitle-1-16pt-regular">CEO & Founder</h2>
+							</div>
+							<div class="profile-contacts">
+								<p>firstname.lastname@company.fi</p>
+								<p>+358 40 111 2222</p>
+							</div>
+						</div>
+					</div>
+					<div class="profile-card">
+						<div class="profile-img">
+							<img src="./assets/img/albert-dera-5.png" />
+						</div>
+						<div class="profile-text">
+							<div class="profile-headings">
+								<h1 class="subtitle-1-16pt">Firstname Lastname</h1>
+								<h2 class="subtitle-1-16pt-regular">CEO & Founder</h2>
+							</div>
+							<div class="profile-contacts">
+								<p>firstname.lastname@company.fi</p>
+								<p>+358 40 111 2222</p>
+							</div>
+						</div>
+					</div>
+					<div class="profile-card">
+						<div class="profile-img">
+							<img src="./assets/img/albert-dera-7.png" />
+						</div>
+						<div class="profile-text">
+							<div class="profile-headings">
+								<h1 class="subtitle-1-16pt">Firstname Lastname</h1>
+								<h2 class="subtitle-1-16pt-regular">CEO & Founder</h2>
+							</div>
+							<div class="profile-contacts">
+								<p>firstname.lastname@company.fi</p>
+								<p>+358 40 111 2222</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Section 4 -->
+			<section class="section-four">
+				<div class="contact-big">
+					<div class="contact-big-img"></div>
+					<div class="contact-big-info">
+						<div class="contact-big-txt">
+							<p>Lorem ipsum dolor sit amet</p>
+							<h1>Lorem ipsum dolor sit amet</h1>
+						</div>
+						<button class="contact-us-btn subtitle-1-16pt-regular">CONTACT US</button>
+					</div>
+				</div>
+			</section>
+			<!-- Section 5 -->
+			<section class="section-five">
+				<div class="final-showcase">
+					<div class="final-showcase-img">
+						<img src="./assets/img/image24.png">
+					</div>
+					<div class="final-showcase-txt padded-container">
+						<h1>Lorem ipsum dolor sit amet</h1>
+						<p>
+							Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
+						</p>
+						<p>
+							Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea.
+						</p>
+					</div>
+				</div>
 			</section>
 		</main>
+		<footer>
+			<div class="footer-container">
+				<div class="footer-contact">
+					<h1>Contact Us</h1>
+					<div class="footer-contact-info">
+						<div>
+							<p>Company Oy</p>
+							<p>Street address 11-13</p>
+							<p>00100 Helsinki</p>
+							<p>Finland</p>
+						</div>
+						<p>+358 40 111 2222</p>
+						<p>info@company.fi</p>
+					</div>
+				</div>
+				<div class="footer-follow">
+					<h1>Follow Us</h1>
+					<div class="footer-follow-info">
+						<div class="footer-links">
+							<ul>
+								<li>
+									<a href="#">
+										<img src="./assets/img/facebook1.svg">
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<img src="./assets/img/instagram1.svg">
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<img src="./assets/img/linkedin1.svg">
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<img src="./assets/img/twitter1.svg">
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<img src="./assets/img/youtube1.svg">
+									</a>
+								</li>
+							</ul>
+						</div>
+						<div class="footer-internal">
+							<p>For Media</p>
+							<p>Terms of Service</p>
+							<p>Privacy Policy</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</div>
 	<script type="text/javascript" src="./js/navMenu.js"></script>
 </body>
