Scaled and styled from mobile to tablet

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="./css/global.css">
 	<link rel="stylesheet" type="text/css" href="./css/header.css">
+	<link rel="stylesheet" type="text/css" href="./css/navbar.css">
 	<link rel="stylesheet" type="text/css" href="./css/sectionOne.css">
 	<link rel="stylesheet" type="text/css" href="./css/sectionTwo.css">
 	<link rel="stylesheet" type="text/css" href="./css/sectionThree.css">
@@ -53,13 +54,13 @@
 			<div class="showcase">
 				<div class="showcase-info padded-container">
 					<div class="showcase-txt">
-						<h1 class="subtitle-1-16pt">Lorem ipsum dolor sit amet</h1>
+						<h2>Lorem ipsum dolor sit amet</h2>
 						<div class="showcase-main-info">
-							<h1 class="showcase-h-2">Lorem ipsum dolor sit amet</h1>
-							<p class="subtitle-1-16pt-regular">
+							<h1>Lorem ipsum dolor sit amet</h1>
+							<p>
 								Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 							</p>
-							<button class="contact-us-btn subtitle-1-16pt-regular">
+							<button class="contact-us-btn">
 								CONTACT US
 							</button>
 						</div>
@@ -79,10 +80,10 @@
 						<div class="contact-card-1">
 							<div class="contact-card-info">
 								<div class="contact-card-txt">
-									<h1 class="subtitle-1-16pt">Lorem ipsum dolor sit amet</h1>
-									<h3 class="h5-24pt-white">H3 Lorem ipsum dolor sit amet</h3>
+									<h2>Lorem ipsum dolor sit amet</h2>
+									<h1>H3 Lorem ipsum dolor sit amet</h1>
 								</div>
-								<button class="contact-us-btn subtitle-1-16pt-regular">
+								<button class="contact-us-btn">
 									CONTACT US
 								</button>
 							</div>
@@ -90,10 +91,10 @@
 						<div class="contact-card-2">
 							<div class="contact-card-info">
 								<div class="contact-card-txt">
-									<h1 class="subtitle-1-16pt">Lorem ipsum dolor sit amet</h1>
-									<h3 class="subtitle-3-26pt">H3 Lorem ipsum dolor sit amet</h3>
+									<h2>Lorem ipsum dolor sit amet</h2>
+									<h1>H3 Lorem ipsum dolor sit amet</h1>
 								</div>
-								<button class="contact-us-btn subtitle-1-16pt-regular">
+								<button class="contact-us-btn">
 									CONTACT US
 								</button>
 							</div>
@@ -101,14 +102,14 @@
 					</div>
 					<div class="section-one-part-two">
 						<div class="part-two-info">
-							<h2 class="part-tow-h2">H2 Lorem ipsum dolor sit amet</h2>
-							<p class="subtitle-1-16pt-regular">
+							<h2>H2 Lorem ipsum dolor sit amet</h2>
+							<p>
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis lorem ac sapien vestibulum congue. Maecenas faucibus venenatis arcu, sit amet ultricies sapien accumsan volutpat. Sed ac dolor sed nibh mattis gravida eu et metus. Curabitur sollicitudin facilisis nibh. Nulla nibh quam, suscipit vel ullamcorper tempor, commodo in nisi. Aliquam viverra venenatis fermentum. Sed viverra turpis nec nunc tincidunt pellentesque in at elit. Phasellus maximus nisi eget ex ullamcorper egestas.
 							</p>
-							<p class="subtitle-1-16pt-regular">
+							<p>
 								 Fusce interdum justo mauris, a condimentum lacus faucibus eu. Mauris nec odio nec nisl blandit faucibus. Duis eget hendrerit felis, a sollicitudin ante. Cras eget turpis non purus varius tincidunt. Duis libero nisi, semper facilisis tempus vitae, porta at tortor. Nullam blandit commodo aliquet. In blandit non enim quis luctus. Ut molestie magna at risus varius blandit. Duis vel diam ac ligula convallis euismod. Cras placerat erat libero, sit amet facilisis justo laoreet in. Ut interdum nisl bibendum quam sodales euismod.
 							</p>
-							<button class="contact-us-btn subtitle-1-16pt-regular">CONTACT US</button>
+							<button class="contact-us-btn">CONTACT US</button>
 						</div>
 						<div class="part-two-images">
 							<img src="./assets/img/daniel-leone.jpg">
@@ -118,10 +119,10 @@
 					<div class="section-one-part-three">
 						<div class="part-three-info">
 							<h2 class="part-three-h2">H2 Lorem ipsum dolor sit amet</h2>
-							<p class="subtitle-1-16pt-regular">
+							<p>
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis lorem ac sapien vestibulum congue. Maecenas faucibus venenatis arcu, sit amet ultricies sapien accumsan volutpat. Sed ac dolor sed nibh mattis gravida eu et metus. Curabitur sollicitudin facilisis nibh. Nulla nibh quam, suscipit vel ullamcorper tempor, commodo in nisi. Aliquam viverra venenatis fermentum. Sed viverra turpis nec nunc tincidunt pellentesque in at elit. Phasellus maximus nisi eget ex ullamcorper egestas.
 							</p>
-							<button class="contact-us-btn subtitle-1-16pt-regular">CONTACT US</button>
+							<button class="contact-us-btn">CONTACT US</button>
 						</div>
 						<div class="part-three-images">
 							<img src="./assets/img/jakob-owens.jpg">
@@ -135,39 +136,39 @@
 				<div class="read-more-cards">
 					<div class="read-more-card">
 						<div class="read-more-txt">
-							<h1 class="read-more-h1">Lorem ipsum dolor sit</h1>
-							<p class="subtitle-1-16pt-regular"> 
+							<h1>Lorem ipsum dolor sit</h1>
+							<p> 
 								Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 							</p>	
 						</div>
-						<button class="read-more-btn subtitle-1-16pt-regular">READ MORE</button>
+						<button class="read-more-btn">READ MORE</button>
 					</div>
 					<div class="read-more-card">
 						<div class="read-more-txt">
-							<h1 class="read-more-h1">Lorem ipsum dolor sit</h1>
-							<p class="subtitle-1-16pt-regular"> 
+							<h1>Lorem ipsum dolor sit</h1>
+							<p> 
 								Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 							</p>	
 						</div>
-						<button class="read-more-btn subtitle-1-16pt-regular">READ MORE</button>
+						<button class="read-more-btn">READ MORE</button>
 					</div>
 					<div class="read-more-card">
 						<div class="read-more-txt">
-							<h1 class="read-more-h1">Lorem ipsum dolor sit</h1>
-							<p class="subtitle-1-16pt-regular"> 
+							<h1>Lorem ipsum dolor sit</h1>
+							<p> 
 								Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 							</p>	
 						</div>
-						<button class="read-more-btn subtitle-1-16pt-regular">READ MORE</button>
+						<button class="read-more-btn">READ MORE</button>
 					</div>
 					<div class="read-more-card">
 						<div class="read-more-txt">
-							<h1 class="read-more-h1">Lorem ipsum dolor sit</h1>
-							<p class="subtitle-1-16pt-regular"> 
+							<h1>Lorem ipsum dolor sit</h1>
+							<p> 
 								Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 							</p>	
 						</div>
-						<button class="read-more-btn subtitle-1-16pt-regular">READ MORE</button>
+						<button class="read-more-btn">READ MORE</button>
 					</div>
 				</div>
 			</section>
@@ -181,8 +182,8 @@
 						</div>
 						<div class="profile-text">
 							<div class="profile-headings">
-								<h1 class="subtitle-1-16pt">Firstname Lastname</h1>
-								<h2 class="subtitle-1-16pt-regular">CEO & Founder</h2>
+								<h1>Firstname Lastname</h1>
+								<h2>CEO & Founder</h2>
 							</div>
 							<div class="profile-contacts">
 								<p>firstname.lastname@company.fi</p>
@@ -196,8 +197,8 @@
 						</div>
 						<div class="profile-text">
 							<div class="profile-headings">
-								<h1 class="subtitle-1-16pt">Firstname Lastname</h1>
-								<h2 class="subtitle-1-16pt-regular">CEO & Founder</h2>
+								<h1>Firstname Lastname</h1>
+								<h2>CEO & Founder</h2>
 							</div>
 							<div class="profile-contacts">
 								<p>firstname.lastname@company.fi</p>
@@ -211,8 +212,8 @@
 						</div>
 						<div class="profile-text">
 							<div class="profile-headings">
-								<h1 class="subtitle-1-16pt">Firstname Lastname</h1>
-								<h2 class="subtitle-1-16pt-regular">CEO & Founder</h2>
+								<h1>Firstname Lastname</h1>
+								<h2>CEO & Founder</h2>
 							</div>
 							<div class="profile-contacts">
 								<p>firstname.lastname@company.fi</p>
@@ -226,8 +227,8 @@
 						</div>
 						<div class="profile-text">
 							<div class="profile-headings">
-								<h1 class="subtitle-1-16pt">Firstname Lastname</h1>
-								<h2 class="subtitle-1-16pt-regular">CEO & Founder</h2>
+								<h1>Firstname Lastname</h1>
+								<h2>CEO & Founder</h2>
 							</div>
 							<div class="profile-contacts">
 								<p>firstname.lastname@company.fi</p>
@@ -240,13 +241,14 @@
 			<!-- Section 4 -->
 			<section class="section-four">
 				<div class="contact-big">
-					<div class="contact-big-img"></div>
 					<div class="contact-big-info">
 						<div class="contact-big-txt">
-							<p>Lorem ipsum dolor sit amet</p>
+							<h2>Lorem ipsum dolor sit amet</h2>
 							<h1>Lorem ipsum dolor sit amet</h1>
 						</div>
-						<button class="contact-us-btn subtitle-1-16pt-regular">CONTACT US</button>
+						<button class="contact-us-btn">
+							CONTACT US
+						</button>
 					</div>
 				</div>
 			</section>
@@ -264,12 +266,15 @@
 						<p>
 							Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea.
 						</p>
+						<button class="contact-us-btn section-five-contact">
+							CONTACT US
+						</button>
 					</div>
 				</div>
 			</section>
 		</main>
 		<footer>
-			<div class="footer-container">
+			<div class="footer-container padded-container">
 				<div class="footer-contact">
 					<h1>Contact Us</h1>
 					<div class="footer-contact-info">
@@ -315,13 +320,22 @@
 								</li>
 							</ul>
 						</div>
-						<div class="footer-internal">
-							<p>For Media</p>
-							<p>Terms of Service</p>
-							<p>Privacy Policy</p>
+						<div class="footer-internal-mobile">
+							<ul>
+								<li><a href="#">For Media</a></li>
+								<li><a href="#">Terms of Service</a></li>
+								<li><a href="#">Privacy Policy</a></li>
+							</ul>
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="footer-internal padded-container">
+				<ul>
+					<li><a href="#">For Media</a></li>
+					<li><a href="#">Terms of Service</a></li>
+					<li><a href="#">Privacy Policy</a></li>
+				</ul>
 			</div>
 		</footer>
 	</div>
