nearly finished product. Styling and scaling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 	<title>Digimoguli</title>
 </head>
 <body>
-	<div class="main-wrapper">
 		<header>
 			<div class="nav-container">
 				<div class="nav-brand">
@@ -72,6 +71,7 @@
 			</div>
 		</header>
 		<main>
+			<div class="wrapper">
 			<!-- Section 1 -->
 			<section class="section-one padded-container">
 				<h3 class="section-title-h3">Section title h3</h3>
@@ -104,10 +104,10 @@
 						<div class="part-two-info">
 							<h2>H2 Lorem ipsum dolor sit amet</h2>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis lorem ac sapien vestibulum congue. Maecenas faucibus venenatis arcu, sit amet ultricies sapien accumsan volutpat. Sed ac dolor sed nibh mattis gravida eu et metus. Curabitur sollicitudin facilisis nibh. Nulla nibh quam, suscipit vel ullamcorper tempor, commodo in nisi. Aliquam viverra venenatis fermentum. Sed viverra turpis nec nunc tincidunt pellentesque in at elit. Phasellus maximus nisi eget ex ullamcorper egestas.
+								Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 							</p>
 							<p>
-								 Fusce interdum justo mauris, a condimentum lacus faucibus eu. Mauris nec odio nec nisl blandit faucibus. Duis eget hendrerit felis, a sollicitudin ante. Cras eget turpis non purus varius tincidunt. Duis libero nisi, semper facilisis tempus vitae, porta at tortor. Nullam blandit commodo aliquet. In blandit non enim quis luctus. Ut molestie magna at risus varius blandit. Duis vel diam ac ligula convallis euismod. Cras placerat erat libero, sit amet facilisis justo laoreet in. Ut interdum nisl bibendum quam sodales euismod.
+								  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea.
 							</p>
 							<button class="contact-us-btn">CONTACT US</button>
 						</div>
@@ -120,7 +120,7 @@
 						<div class="part-three-info">
 							<h2 class="part-three-h2">H2 Lorem ipsum dolor sit amet</h2>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis lorem ac sapien vestibulum congue. Maecenas faucibus venenatis arcu, sit amet ultricies sapien accumsan volutpat. Sed ac dolor sed nibh mattis gravida eu et metus. Curabitur sollicitudin facilisis nibh. Nulla nibh quam, suscipit vel ullamcorper tempor, commodo in nisi. Aliquam viverra venenatis fermentum. Sed viverra turpis nec nunc tincidunt pellentesque in at elit. Phasellus maximus nisi eget ex ullamcorper egestas.
+								Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 							</p>
 							<button class="contact-us-btn">CONTACT US</button>
 						</div>
@@ -161,15 +161,6 @@
 						</div>
 						<button class="read-more-btn">READ MORE</button>
 					</div>
-					<div class="read-more-card">
-						<div class="read-more-txt">
-							<h1>Lorem ipsum dolor sit</h1>
-							<p> 
-								Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-							</p>	
-						</div>
-						<button class="read-more-btn">READ MORE</button>
-					</div>
 				</div>
 			</section>
 			<!-- Section 3 -->
@@ -178,7 +169,7 @@
 				<div class="profile-cards">
 					<div class="profile-card">
 						<div class="profile-img">
-							<img src="./assets/img/albert-dera-1.png" />
+							<img src="./assets/img/albert-dera-2.png" />
 						</div>
 						<div class="profile-text">
 							<div class="profile-headings">
@@ -193,7 +184,7 @@
 					</div>
 					<div class="profile-card">
 						<div class="profile-img">
-							<img src="./assets/img/albert-dera-3.png" />
+							<img src="./assets/img/albert-dera-4.png" />
 						</div>
 						<div class="profile-text">
 							<div class="profile-headings">
@@ -208,7 +199,7 @@
 					</div>
 					<div class="profile-card">
 						<div class="profile-img">
-							<img src="./assets/img/albert-dera-5.png" />
+							<img src="./assets/img/albert-dera-6.png" />
 						</div>
 						<div class="profile-text">
 							<div class="profile-headings">
@@ -223,7 +214,7 @@
 					</div>
 					<div class="profile-card">
 						<div class="profile-img">
-							<img src="./assets/img/albert-dera-7.png" />
+							<img src="./assets/img/albert-dera-8.png" />
 						</div>
 						<div class="profile-text">
 							<div class="profile-headings">
@@ -252,13 +243,15 @@
 					</div>
 				</div>
 			</section>
+			</div>
+
 			<!-- Section 5 -->
 			<section class="section-five">
 				<div class="final-showcase">
 					<div class="final-showcase-img">
 						<img src="./assets/img/image24.png">
 					</div>
-					<div class="final-showcase-txt padded-container">
+					<div class="final-showcase-txt">
 						<h1>Lorem ipsum dolor sit amet</h1>
 						<p>
 							Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
@@ -338,7 +331,6 @@
 				</ul>
 			</div>
 		</footer>
-	</div>
 	<script type="text/javascript" src="./js/navMenu.js"></script>
 </body>
 </html>
